grammar.js
  toplevel: $ => seq($._toplevel, repeat($._toplevel)),
  _toplevel: $ => choice($.operation, $.attribute_alias_def, $.type_alias_def),

  // Common syntax (lang-ref)
  //  digit     ::= [0-9]
  //  hex_digit ::= [0-9a-fA-F]
  //  letter    ::= [a-zA-Z]
  //  id-punct  ::= [$._-]
  //
  //  integer-literal ::= decimal-literal | hexadecimal-literal
  //  decimal-literal ::= digit+
  //  hexadecimal-literal ::= `0x` hex_digit+
  //  float-literal ::= [-+]?[0-9]+[.][0-9]*([eE][-+]?[0-9]+)?
  //  string-literal  ::= `"` [^"\n\f\v\r]* `"`
  //  Escape sequences: \\, \", \n, \t, \xNN (hex)
  //
  integer_literal: $ => choice($._decimal_literal, $._hexadecimal_literal),
  _decimal_literal: $ => token(seq(optional(/[-+]/), repeat1(/[0-9]/))),
  _hexadecimal_literal: $ => token(seq('0x', repeat1(/[0-9a-fA-F]/))),
  string_literal: $ => token(seq('"', repeat(choice(
    /[^\\"\n\f\v\r]+/,
    /\\[\\nrtfv"]/,
    /\\x[0-9a-fA-F]{2}/,
    /\\[0-9]{1,3}/
  )), '"')),
  bool_literal: $ => token(choice('true', 'false')),
  bare_id: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.]/))),
  _alias_or_dialect_id: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$]/))),
  value_use: $ => seq('%', $._suffix_id),
  _suffix_id: $ => token(seq(choice(repeat1(/[0-9]/),
    seq(/[a-zA-Z_$.-]/, repeat(/[a-zA-Z0-9_$.-]/))),
    optional(seq(choice(':', '#'), repeat1(/[0-9]/))))),
  symbol_ref_id: $ => seq('@', choice($._suffix_id, $.string_literal),
    optional(seq('::', $.symbol_ref_id))),
  operation: $ => seq(
    field('lhs', optional($._op_result_list)),
    field('rhs', choice($.generic_operation, $.custom_operation)),
    field('location', optional($.trailing_location))),
  _op_result_list: $ => seq($.op_result, repeat(seq(',', $.op_result)), '='),
  op_result: $ => seq($.value_use, optional(seq(':', $.integer_literal))),
  caret_id: $ => seq('^', $._suffix_id),
  region: $ => seq('{', optional($.entry_block), repeat($.block), '}'),
  entry_block: $ => repeat1($.operation),

  // Types
  //   type ::= type-alias | dialect-type | builtin-type
  //
  //   type-list-no-parens ::=  type (`,` type)*
  //   type-list-parens ::= `(` type-list-no-parens? `)`
  //
  //   // This is a common way to refer to a value with a specified type.
  //   ssa-use-and-type ::= ssa-use `:` type
  //   ssa-use ::= value-use
  //
  //   // Non-empty list of names and types.
  //   ssa-use-and-type-list ::= ssa-use-and-type (`,` ssa-use-and-type)*
  //
  //   function-type ::= (type | type-list-parens) `->` (type |
  //                      type-list-parens)
  type: $ => choice($.dialect_type, $.type_alias, $.builtin_type),
  _type_list_parens: $ => seq('(', optional($._type_list_no_parens), ')'),
  function_type: $ => seq(choice($.type, $._type_list_parens), $._function_return),
  _function_return: $ => seq(token('->'), choice($.type, $._type_list_parens)),
  dialect_type: $ => seq(
    '!', choice($.opaque_dialect_item, $.pretty_dialect_item)),
  dialect_namespace: $ => $._alias_or_dialect_id,
  dialect_ident: $ => $._alias_or_dialect_id,
  pretty_dialect_item: $ => seq($.dialect_namespace, '.', $.dialect_ident,
    optional($.pretty_dialect_item_body)),
  pretty_dialect_item_body: $ => seq('<', repeat($._pretty_dialect_item_contents), '>'),
  _pretty_dialect_item_contents: $ => prec.left(choice($.pretty_dialect_item_body,
    repeat1(/[^<>]/))),

  // Builtin types
  builtin_type: $ => choice(
    // TODO: Add opaque_type
    $.integer_type,
    $.float_type,
    $.complex_type,
    $.index_type,
    $.memref_type,
    $.none_type,
    $.tensor_type,
    $.vector_type,
    $.tuple_type),

  // signed-integer-type ::= `si`[1-9][0-9]*
  // unsigned-integer-type ::= `ui`[1-9][0-9]*
  // signless-integer-type ::= `i`[1-9][0-9]*
  // integer-type ::= signed-integer-type | unsigned-integer-type | signless-integer-type
  integer_type: $ => token(seq(choice('si', 'ui', 'i'), /[1-9]/, repeat(/[0-9]/))),
  // Float types: standard IEEE types, brain float, and FP8 variants
  // f8E5M2, f8E4M3FN, f8E5M2FNUZ, f8E4M3FNUZ, f8E4M3B11FNUZ are FP8 types
  // tf32 is TensorFloat-32
  attribute_value: $ => choice(seq('[', optional($._attribute_value_nobracket),
    repeat(seq(',', $._attribute_value_nobracket)), ']'), $._attribute_value_nobracket),
  _attribute_value_nobracket: $ => choice($.attribute_alias, $.dialect_attribute,
    $.builtin_attribute, $.dictionary_attribute, $._literal_and_type, $.type),
  func_return: $ => seq(token('->'), $.type_list_attr_parens),
  func_arg_list: $ => seq('(', optional(choice($.variadic,
    $._value_id_and_type_attr_list)), ')'),
  _value_id_and_type_attr_list: $ => seq($._value_id_and_type_attr,
    repeat(seq(',', $._value_id_and_type_attr)), optional(seq(',', $.variadic))),
  type_list_attr_parens: $ => choice($.type, seq('(', $.type, optional($.attribute),
    repeat(seq(',', $.type, optional($.attribute))), ')'), seq('(', ')')),
  custom_operation: $ => choice(
    $.builtin_dialect,
    $.func_dialect,
    $.llvm_dialect,
    $.arith_dialect,
    $.math_dialect,
    $.cf_dialect,
    $.scf_dialect,
    $.memref_dialect,
    $.vector_dialect,
    $.tensor_dialect,
    $.bufferization_dialect,
    $.affine_dialect,
    $.linalg_dialect,
    $.cir_dialect,
    // Generic operation for unknown dialects
    $.generic_dialect_operation
  ),

  // Generic dialect operation: dialect.operation_name operands attributes : types
  // Matches any operation from dialects we haven't explicitly implemented
  // Multiple patterns to handle various syntax forms
